--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 	<body>
 
 	Rust is a post apocalyptic sandbox game where players build bases and raid them. In order to do so, basic materials are needed to be gathered. Here are some basic calculator for bases.<br>
-	Rocket Recipe:
+	<br>Rocket Recipe:<br><br>
 
-	2 Metal Pipe 150 Gun Powder 10 Explosives
+	2 Metal Pipe 150 Gun Powder 10 Explosives<br>
 
-	1 Explosive is 50 Gunpowder 3 Low Grade Fuel 10 Sulfur 10 Metal Frag
+	1 Explosive is 50 Gunpowder 3 Low Grade Fuel 10 Sulfur 10 Metal Frag<br><br>
 
-	Number of Rockets You Want To Craft <input type="text" id="input" value="1"/>
+	Number of Rockets You Want To Craft: <input type="text" id="input" value="1"/>
 	<input type="button" value = "Craft!" onClick="calcMat();"/>
 	<div id="output">
 
 
-
+	</div>
 	</body>
+</html>	
